[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rna-stability-elements"
version = "0.1.0"
description = "Pipelines and models for cell-type-specific RNA stability regulatory elements."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "requests>=2.31",
  "scikit-learn>=1.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
deep = ["torch>=2.1"]
dev = ["pytest>=7.4", "ruff>=0.4"]
analysis = ["matplotlib>=3.8", "seaborn>=0.13", "gseapy>=1.1"]
boosting = ["xgboost>=2.0"]
workflow = ["snakemake>=8"]
rna-lm = [
  "transformers>=4.30,<4.41",
  "tokenizers>=0.13,<0.20",
  "safetensors>=0.3",
  "einops>=0.8",
]

[project.scripts]
rse = "rna_stability_elements.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
